--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 
-    
+
     package="com.hapill.CaromScoreBoard"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0" zxc>
 
     <uses-sdk
         android:minSdkVersion="8"
