--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,8 @@
 
     package="com.hapill.CaromScoreBoard"
     android:versionCode="1"
-    android:versionName="1.0" zxc>
+    android:versionName="1.0"   >
+
 
     <uses-sdk
         android:minSdkVersion="8"
